# restaurant-server

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  thunder-client-SimpleRestaurant.json
migrations/: 20240113072601_paidy.sql
src/: config.rs  context.rs  error.rs  handlers.rs  lib.rs  main.rs  model.rs  routes.rs
src/dao/: mod.rs  order_dao.rs  pg_order_dao.rs
tests/: test_api.rs  test_dao.rs
tests/fixtures/: orders.sql  test_dao.rs
