[package]
name = "restaurant-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.7.3", features=["json"]}
axum-extra = "0.9.1"
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = "0.8.5"
dotenvy = "0.15.7"
envy = "0.4.2"
futures = "0.3.30"
serde = { version = "1.0.195", features = ["derive"] } 
serde_json = "1.0.111"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "chrono" ] }
thiserror = "1.0.56"
tokio = { version = "1", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features=["env-filter"]}
trait-variant = "0.1.1"
